fix overflow issue

--- a/src/GameComponents/Board.sass
+++ b/src/GameComponents/Board.sass
@@ -1,3 +1,5 @@
+body
+    overflow: hidden
 .Board
     padding: 5rem
     height:80vh
@@ -23,3 +25,16 @@
         width: 10rem
         display: flex
         z-index: 5
+
+.solved-container
+    position: absolute
+    height: 100vh
+    width: 100vw
+    display: flex
+    justify-content: center
+
+    .solved
+        font-size: 5rem
+        font-weight: 800
+        color: #bbb
+        margin: auto
